@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Add PslCard payment gateway [MoneySpyder http://moneyspyder.co.uk]
+#
 # * Scrub the card number, expiry, and CVV code from the response [cody]
 #
 # * Use test? query for checking test mode [cody]
